Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34580

Crash in qt_try_modal ( top is NULL )

XMLWordPrintable

    • 61541404bcf216330cc081964dade9b2427e8491 (stable, 10.4.2014)

      I've found a bug in qtbase\src\widgets\kernel\qapplication_qpa.cpp in function:
      bool qt_try_modal(QWidget *widget, QEvent::Type type)

      There is NULL in variable "top" so instruction
      if ((block_event || paint_event) && top->parentWidget() == 0)
      top->raise();
      makes a crash.

      This crash is connected to modality.

      There is minimal example of qml :

      import QtQuick 2.1
      import QtQuick.Controls 1.0
      import QtQuick.Window 2.0

      Window {
      width: 640
      height: 480
      modality: Qt.ApplicationModal

      Button

      { text: qsTr("Move mouse cursor on me") anchors.horizontalCenter: parent.horizontalCenter anchors.verticalCenter: parent.verticalCenter tooltip: "Move mouse cursor on me and hold till crash" }

      }

      Regards,
      Alex

        1. Bug_34580.zip
          4 kB
        2. ex_crash1.qml
          0.4 kB
        3. ex_crash1.qmlproject
          0.5 kB
        4. qtbug34580.zip
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            avoget Alex Fofanov
            Votes:
            4 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes