Fix crash in qt_try_modal.

Task-number: QTBUG-34580

Change-Id: Idc549116fa99aa49ac7c67dcfc76d32ca71f3c76
Reviewed-by: Jan Arve Sæther <jan-arve.saether@digia.com>

cregit: 61541404bcf216330cc081964dade9b2427e8491 https://github.com/qt/qtbase/commit/61541404bcf216330cc081964dade9b2427e8491